[tool.poetry]
name = "asyncio-learning"
version = "0.1.0"
description = ""
authors = ["sburniak <sebastian.burniak@nokia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
